; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_resource.c_wined3d_resource_destroy_object.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_resource.c_wined3d_resource_destroy_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_resource = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @wined3d_resource_destroy_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wined3d_resource_destroy_object(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.wined3d_resource*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.wined3d_resource*
  store %struct.wined3d_resource* %5, %struct.wined3d_resource** %3, align 8
  %6 = load %struct.wined3d_resource*, %struct.wined3d_resource** %3, align 8
  %7 = call i32 @wined3d_resource_free_sysmem(%struct.wined3d_resource* %6)
  %8 = load %struct.wined3d_resource*, %struct.wined3d_resource** %3, align 8
  %9 = getelementptr inbounds %struct.wined3d_resource, %struct.wined3d_resource* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.wined3d_resource*, %struct.wined3d_resource** %3, align 8
  %12 = load %struct.wined3d_resource*, %struct.wined3d_resource** %3, align 8
  %13 = getelementptr inbounds %struct.wined3d_resource, %struct.wined3d_resource* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @context_resource_released(i32 %10, %struct.wined3d_resource* %11, i32 %14)
  %16 = load %struct.wined3d_resource*, %struct.wined3d_resource** %3, align 8
  %17 = call i32 @wined3d_resource_release(%struct.wined3d_resource* %16)
  ret void
}

declare dso_local i32 @wined3d_resource_free_sysmem(%struct.wined3d_resource*) #1

declare dso_local i32 @context_resource_released(i32, %struct.wined3d_resource*, i32) #1

declare dso_local i32 @wined3d_resource_release(%struct.wined3d_resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
